Adjusting Sonarqube issues